# python-jsonstar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eduzz01.py  lint.sh  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  publish.yml  push.yml  test.yaml  test.yml
jsonplus/: __init__.py  decoder.py  default_encoders.py  encoder.py
jsonplus/tests/: test_default_encoder.py  test_encoder.py
jsonstar/: __init__.py  decoder.py  default_encoders.py  encoder.py  null_dict.py
python-eduzz/: README.md  pyproject.toml  setup.cfg
python-eduzz/eduzz/: __init__.py  auth.py  core.py  serializers.py  sessions.py  tests.py
python-eduzz/tests/: test_auth.py
tests/: test_default_encoder.py  test_encoder.py  test_register_defaults.py
