[metadata]
name = python-eduzz
version = 1.0
author = Henrique Bastos
author_email = henrique@bastos.net
description = Cliente Python para a API v2 do Eduzz.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henriquebastos/python-eduzz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False

[flake8]
ignore = E501, W503, F403, F401
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
